--- a/src/main/webapp/categories.xhtml
+++ b/src/main/webapp/categories.xhtml
@@ -5,8 +5,8 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 template="/template_landing.xhtml">
     <ui:define name="content">
-        <div id="indexpage">
-            <div class="indexpage-content">
+        <div id="mainsection">
+            <div class="mainsection-content">
                 <h1>#{i18n['Categories']}</h1>
 
                 <div class="ui-g">
