--- a/src/main/webapp/category.xhtml
+++ b/src/main/webapp/category.xhtml
@@ -14,8 +14,8 @@
             <f:event type="preRenderView" listener="#{categoryBean.onLoad}"/>
         </f:metadata>
 
-        <div id="indexpage">
-            <div class="indexpage-content">
+        <div id="mainsection">
+            <div class="mainsection-content">
                 <h1><h:outputText value="#{categoryBean.selectedCategory.code}"/></h1>
                 <p>
                     <h:form>
