--- a/src/main/webapp/contracts/omega-layout/template_landing.xhtml
+++ b/src/main/webapp/contracts/omega-layout/template_landing.xhtml
@@ -103,6 +103,7 @@
                                         <li><p:link outcome="/index" fragment="introduction" value="#{i18n['Home']}"/></li>
                                         <li><p:link outcome="/search" value="#{i18n['Search for Products']}"/></li>
                                         <li><p:link outcome="/categories" value="#{i18n['Categories']}"/></li>
+                                        <li><p:link outcome="/post" value="#{i18n['Posts']}"/></li>
                                         <ui:repeat value="#{pageBean.pages}" var="page">
                                             <li>
                                                 <p:link outcome="/page" value="#{page.name}">
