--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -15,8 +15,8 @@
                 <p:button outcome="/login" value="#{i18n['Log In']}"/>
             </div>
         </div>
-        <div id="indexpage">
-            <div class="indexpage-content">
+        <div id="mainsection">
+            <div class="mainsection-content">
                 <div class="ui-g">
                     <ui:repeat value="#{productBean.banners}" var="product">
                         <div class="ui-g-12 ui-md-12">
