--- a/src/main/webapp/member/ticket/index.xhtml
+++ b/src/main/webapp/member/ticket/index.xhtml
@@ -7,8 +7,8 @@
                 template="/template_landing.xhtml">
     <ui:define name="title">#{i18n['Tickets']}</ui:define>
     <ui:define name="content">
-        <div id="indexpage">
-            <div class="indexpage-content">
+        <div id="mainsection">
+            <div class="mainsection-content">
                 <h1>#{i18n['Tickets']}</h1>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 
