--- a/src/main/webapp/member/shopping/shopping.xhtml
+++ b/src/main/webapp/member/shopping/shopping.xhtml
@@ -12,8 +12,8 @@
             <f:event type="preRenderView" listener="#{shoppingBean.onLoad}" />
         </f:metadata>
 
-        <div id="indexpage">
-            <div class="indexpage-content">
+        <div id="mainsection">
+            <div class="mainsection-content">
                 <h1>#{i18n['Shopping Basket']}</h1>
                 <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 
