--- a/src/main/webapp/member/ticket/show.xhtml
+++ b/src/main/webapp/member/ticket/show.xhtml
@@ -13,8 +13,8 @@
             <f:event type="preRenderView" listener="#{ticketmessageView.onLoad}"/>
         </f:metadata>
 
-        <div id="indexpage">
-            <div class="indexpage-content">
+        <div id="mainsection">
+            <div class="mainsection-content">
                 <h1>#{i18n['Ticket']}</h1>
 
                 <div class="ui-g">
