--- a/src/main/webapp/page.xhtml
+++ b/src/main/webapp/page.xhtml
@@ -11,8 +11,8 @@
             <f:event type="preRenderView" listener="#{pageBean.onLoad}"/>
         </f:metadata>
 
-        <div id="indexpage">
-            <div class="indexpage-content">
+        <div id="mainsection">
+            <div class="mainsection-content">
                 <h1><h:outputText value="#{pageBean.selectedRecord.name}"/></h1>
                 <p><h:outputText value="#{pageBean.selectedRecord.description}"/></p>
 
