--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -7,30 +7,28 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 template="/template_landing.xhtml">
     <ui:define name="content">
-        <div id="introduction">
+<!--        <div id="introduction">
             <div class="introduction-content">
                 <span class="title">ecommerce</span>
                 <span class="subtitle">#{i18n['Start your online business']}</span>
                 <p:graphicImage name="images/landing/section1_logo.png" />
                 <p:button outcome="/login" value="#{i18n['Log In']}"/>
             </div>
-        </div>
+        </div>-->
         <div id="mainsection">
             <div class="mainsection-content">
                 <div class="ui-g">
-                    <ui:repeat value="#{productBean.banners}" var="product">
-                        <div class="ui-g-12 ui-md-12">
-                            <o:graphicImage value="#{banner.bytes}" dataURI="true" alt="#{banner.name}" title="#{banner.name}" rendered="#{not empty banner.bytes}"/>
-                            <h3>#{product.bannerHeadline}</h3>
-                        </div>
-                    </ui:repeat>
-                </div>
-                <div class="ui-g">
-                    <p:imageSwitch effect="fade">
-                        <ui:repeat value="#{productBean.banners}" var="product">
-                            <p:graphicImage value="/product/#{product.image.name}" alt="#{product.name}" title="#{product.name}" rendered="#{not empty product.image}" />
-                        </ui:repeat>
-                    </p:imageSwitch>
+                    <h:form>
+                        <p:commandButton type="button" onclick="PF('switcher').previous();"
+                                         icon="ui-icon-circle-triangle-w" id="prev"/>
+                        <p:commandButton type="button" onclick="PF('switcher').next();"
+                                         icon="ui-icon-circle-triangle-e" id="next"/>
+                        <p:imageSwitch effect="fade" widgetVar="switcher">
+                            <ui:repeat value="#{productBean.banners}" var="product">
+                                <p:graphicImage value="/product/#{product.image.name}" alt="#{product.name}" title="#{product.name}" width="600" height="100" rendered="#{not empty product.image}" />
+                            </ui:repeat>
+                        </p:imageSwitch>
+                    </h:form>
                 </div>
                 <div class="ui-g">
                     <p:dataScroller id="product" value="#{productBean.lazyModel}" var="product" 
