--- a/src/main/webapp/product.xhtml
+++ b/src/main/webapp/product.xhtml
@@ -19,7 +19,7 @@
 
                 <div class="ui-g">
                     <div class="ui-g-8">
-                        <p:galleria value="#{productBean.selectedRecord.images}" var="image" showCaption="true">
+                        <p:galleria value="#{productBean.selectedRecord.images}" var="image" showCaption="false">
                             <p:graphicImage value="/product/#{image.name}" alt="#{image.product.name}" title="#{image.product.name}" rendered="#{not empty image}" />
                         </p:galleria>
                     </div>
