--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -8,41 +8,44 @@
                 template="/template_landing.xhtml">
     <ui:define name="head">
         <style>
-            .w3-content{max-width:980px;margin:auto}
+            .w3-content{width:100%;height:500px}
             .w3-display-container{position:relative;}
-            .w3-button{border:none;display:inline-block;outline:0;padding:6px 16px;vertical-align:middle;overflow:hidden;text-decoration:none!important;color:#fff;background-color:#000;text-align:center;cursor:pointer;white-space:nowrap}
-            .w3-button{color:#000;background-color:#f1f1f1;padding:8px 16px}
-            .w3-button:hover{color:#000!important;background-color:#ccc!important}
-            .w3-display-left{position:absolute;top:50%;left:0%;transform:translate(0%,-50%);-ms-transform:translate(-0%,-50%)}
-            .w3-display-right{position:absolute;top:50%;right:0%;transform:translate(0%,-50%);-ms-transform:translate(0%,-50%)}
+            .w3-button{z-index:5;font-size:2em}
+            .w3-display-left{position:absolute;top:50%;left:3%;-webkit-transform:translate(0%,-50%);transform:translate(0%,-50%);-ms-transform:translate(0%,-50%)}
+            .w3-display-right{position:absolute;top:50%;right:3%;-webkit-transform:translate(0%,-50%);transform:translate(0%,-50%);-ms-transform:translate(0%,-50%)}
+            .w3-display-bottommiddle{position:absolute;bottom:0;left:50%;-webkit-transform:translate(-50%,0%);transform:translate(-50%,0%);-ms-transform:translate(-50%,0%)}
         </style>
     </ui:define>
     <ui:define name="content">
-        <!--        <div id="introduction">
-                    <div class="introduction-content">
-                        <span class="title">ecommerce</span>
-                        <span class="subtitle">#{i18n['Start your online business']}</span>
-                        <p:graphicImage name="images/landing/section1_logo.png" />
-                        <p:button outcome="/login" value="#{i18n['Log In']}"/>
-                    </div>
-                </div>-->
+        <div id="introduction">
+            <div class="introduction-content">
+                <span class="title">ecommerce</span>
+                <span class="subtitle">#{i18n['Start your online business']}</span>
+                <p:graphicImage name="images/landing/section1_logo.png" />
+                <p:button outcome="/login" value="#{i18n['Log In']}"/>
+            </div>
+        </div>
+        <div class="w3-content w3-display-container">
+            <h:form rendered="#{not empty productBean.banners}">
+                <p:imageSwitch effect="fade" widgetVar="switcher">
+                    <ui:repeat value="#{productBean.banners}" var="product">
+                        <p:graphicImage value="/product/#{product.image.name}" alt="#{product.name}" title="#{product.name}" style="width:100%;height:500px" rendered="#{not empty product.image}" />
+                    </ui:repeat>
+                </p:imageSwitch>
+                <p:commandLink onclick="PF('switcher').previous();"
+                               styleClass="fa fa-chevron-left w3-button w3-display-left"/>
+                <p:commandLink onclick="PF('switcher').next();"
+                               styleClass="fa fa-chevron-right w3-button w3-display-right"/>
+                <div class="w3-button w3-display-bottommiddle">
+                    <ui:repeat value="#{productBean.banners}" var="product" varStatus="varStatus">
+                        <p:commandLink styleClass="fa fa-circle-thin" title="#{varStatus.index+1}" onclick="PF('switcher').switchTo(#{varStatus.index});" />
+                    </ui:repeat>
+                </div>
+            </h:form>
+        </div>
         <div id="mainsection">
             <div class="mainsection-content">
                 <div class="ui-g">
-                    <h:form rendered="#{not empty productBean.banners}">
-                        <p:commandButton type="button" onclick="PF('switcher').previous();"
-                                         icon="ui-icon-circle-triangle-w" styleClass="w3-button w3-display-left"/>
-                        <p:commandButton type="button" onclick="PF('switcher').next();"
-                                         icon="ui-icon-circle-triangle-e" styleClass="w3-button w3-display-right"/>
-                        <p:imageSwitch styleClass="w3-content w3-display-container" effect="fade" widgetVar="switcher">
-                            <ui:repeat value="#{productBean.banners}" var="product">
-                                <p:graphicImage value="/product/#{product.image.name}" alt="#{product.name}" title="#{product.name}" rendered="#{not empty product.image}" />
-                            </ui:repeat>
-                        </p:imageSwitch>
-                        <ui:repeat value="#{productBean.banners}" var="product" varStatus="varStatus">
-                            <p:commandLink styleClass="fa fa-circle-thin" title="#{varStatus.index+1}" onclick="PF('switcher').switchTo(#{varStatus.index});" />
-                        </ui:repeat>
-                    </h:form>
                 </div>
                 <div class="ui-g">
                     <p:dataScroller id="product" value="#{productBean.lazyModel}" var="product" 
