--- a/src/main/webapp/administrator/product/image.xhtml
+++ b/src/main/webapp/administrator/product/image.xhtml
@@ -63,6 +63,40 @@
                                         </f:facet>
                                     </p:panelGrid>
                                 </p:dataGrid>
+
+                                <p:dataTable value="#{productController.selectedRecord.images}" var="image">
+                                    <f:facet name="header">#{i18n['Files']}</f:facet>
+                                    <p:column headerText="#{i18n['Image']}">
+                                        <p:lightBox>
+                                            <p:commandLink title="#{image.name}">
+                                                <p:graphicImage value="/product/#{image.name}" alt="#{image.product.name}" title="#{image.product.name}" width="80" height="80" rendered="#{not empty image}" />
+                                            </p:commandLink>
+                                            <f:facet name="inline">
+                                                <p:graphicImage value="/product/#{image.name}" alt="#{image.product.name}" title="#{image.product.name}" width="512" height="512" rendered="#{not empty image}" />
+                                            </f:facet>
+                                        </p:lightBox>
+                                    </p:column>
+                                    <p:column headerText="#{i18n['File Name']}">#{image.nameOriginal}</p:column>
+                                    <p:column headerText="#{i18n['Content Type']}" width="150">#{image.contentType}</p:column>
+                                    <p:column headerText="#{i18n['Size']}" width="100">#{image.size}</p:column>
+                                    <p:column headerText="#{i18n['Image Type']}" width="100">#{i18n[image.imageType.label]}</p:column>
+                                    <p:column width="70">
+                                        <p:commandButton title="#{i18n['Download']}" 
+                                                         actionListener="#{productController.prepareFile(image)}" 
+                                                         ajax="false" 
+                                                         onclick="PrimeFaces.monitorDownload(start, stop);" 
+                                                         icon="fa fa-cloud-download">
+                                            <p:fileDownload value="#{productController.streamedContent}" />
+                                        </p:commandButton>
+                                        <p:commandButton title="#{i18n['Delete']}" 
+                                                         actionListener="#{productController.deleteFile(image)}"
+                                                         update="@form, :growl"
+                                                         styleClass="red-button"
+                                                         icon="fa fa-trash">
+                                            <p:confirm header="#{i18n['Confirmation']}" message="#{i18n['Are you sure?']}" icon="ui-icon-alert"/>
+                                        </p:commandButton>
+                                    </p:column>
+                                </p:dataTable>
                             </h:form>
                         </div>
                     </div>
