--- a/src/main/webapp/member/shopping/shopping_0062.xhtml
+++ b/src/main/webapp/member/shopping/shopping_0062.xhtml
@@ -15,6 +15,11 @@
                 <div class="ui-g">
                     <div class="ui-g-12">
                         0062
+
+
+                        <h:form>
+                            <p:commandButton value="#{i18n['Return to shopping basket']}" action="shopping"/>
+                        </h:form>
                     </div>
                 </div>
             </div>
