--- a/src/main/webapp/member/sale/show.xhtml
+++ b/src/main/webapp/member/sale/show.xhtml
@@ -57,7 +57,7 @@
                                         <f:param name="slug" value="#{saleline.product.slug}"/>
                                     </p:link>
                                     <div><small><i>#{saleline.note}</i></small></div>
-                                    <div><small><i>#{i18n[saleline.salelineStatus]}</i></small></div>
+                                    <div><small><i>#{i18n[saleline.saleStatus]}</i></small></div>
                                 </p:column>
                                 <p:column headerText="#{i18n['Unit(s)']}">
                                     <h:outputText value="#{saleline.IPN_QTY}"/>
