--- a/src/main/webapp/member/shopping/shopping_wire.xhtml
+++ b/src/main/webapp/member/shopping/shopping_wire.xhtml
@@ -18,66 +18,66 @@
                         <composite:navigationMember/>
                     </div>
                     <div class="ui-g-9">
-                        <div class="ui-g-12">
-                            <p:dataTable value="#{shoppingBean.basketitems}" var="basketitem" emptyMessage="#{i18n['No records found']}">
-                                <p:column headerText="#{i18n['Product']}">
-                                    <p:link outcome="/product" value="#{basketitem.product.name}">
-                                        <f:param name="id" value="#{basketitem.product.id}"/>
-                                        <f:param name="slug" value="#{basketitem.product.slug}"/>
-                                    </p:link>
-                                    <h:outputText value="#{basketitem.note}"/>
-                                </p:column>
-                                <p:column headerText="#{i18n['Unit(s)']}">
-                                    <h:outputText value="#{basketitem.quantity}"/>
-                                </p:column>
-                                <p:column headerText="#{i18n['Unit Price']}">
-                                    <h:outputText value="#{of:formatCurrency(shoppingBean.getPriceExchanged(basketitem.product, basketitem.quantity, 'TRY'), 'TRY')}"/>
-                                </p:column>
-                                <p:column headerText="#{i18n['Unit Tax']}">
-                                    <h:outputText value="#{of:formatCurrency(shoppingBean.getTaxExchanged(basketitem.product, basketitem.quantity, 'TRY'), 'TRY')}"/>
-                                </p:column>
-                                <p:column headerText="#{i18n['Amount']}">
-                                    <h:outputText value="#{of:formatCurrency(shoppingBean.getAmountExchanged(basketitem.product, 'TRY'), 'TRY')}"/>
-                                </p:column>
-                            </p:dataTable>
-                        </div>
-                        <div class="ui-g-12">
-                            <h:panelGrid columns="2" style="text-align: right; float: right;">
-                                <h:outputText value="#{i18n['Basket Total']}"/>
-                                <h:outputText value="#{of:formatCurrency(shoppingBean.doCalculateBasketTotal('TRY'), 'TRY')}"/>
-                                <h:outputText value="#{i18n['Tax Total']}"/>
-                                <h:outputText value="#{of:formatCurrency(shoppingBean.doCalculateTaxTotal('TRY'), 'TRY')}"/>
-                                <h:outputText value="#{i18n['General Total']}"/>
-                                <h:outputText value="#{of:formatCurrency(shoppingBean.doCalculateGeneralTotal('TRY'), 'TRY')}"/>
-                            </h:panelGrid>
-                        </div>
-                        <div class="ui-g-12">
-                            <strong>#{i18n['Bill Address']}</strong><br/>
-                            <address>
-                                #{shoppingBean.billAddress.firstname} #{shoppingBean.billAddress.lastname}<br/>
-                                #{shoppingBean.billAddress.fulladdress}<br/>
-                                <abbr title="#{i18n['Phone Number']}">P:</abbr> #{shoppingBean.billAddress.phone}<br/>
-                            </address>
-                        </div>
-                        <div class="ui-g-12">
-                            <strong>#{i18n['Delivery Address']}</strong><br/>
-                            <address>
-                                #{shoppingBean.deliveryAddress.firstname} #{shoppingBean.deliveryAddress.lastname}<br/>
-                                #{shoppingBean.deliveryAddress.fulladdress}<br/>
-                                <abbr title="#{i18n['Phone Number']}">P:</abbr> #{shoppingBean.deliveryAddress.phone}<br/>
-                            </address>
-                        </div>
-                        <div class="ui-g-12">
-                            <strong>#{i18n['Payment Method']}</strong><br/>
-                            #{i18n[shoppingBean.paymentMethod]}
-                        </div>
-                        <div class="ui-g-12">
-                            <h:form>
-                                <p:commandButton value="#{i18n['Return to shopping basket']}" action="shopping"/>
-                                <p:commandButton id="button" value="#{i18n['Complete the order']}" actionListener="#{shoppingBean.doProcessOrder}" onclick="this.childNodes[0].innerHTML = '#{i18n['Please wait']}'; this.disabled = true;"/>
-                                <p:blockUI block=":body" trigger="button" />
-                            </h:form>
-                        </div>
+                        <p:dataTable value="#{shoppingBean.basketitems}" var="basketitem" emptyMessage="#{i18n['No records found']}">
+                            <p:column headerText="#{i18n['Product']}">
+                                <p:link outcome="/product" value="#{basketitem.product.name}">
+                                    <f:param name="id" value="#{basketitem.product.id}"/>
+                                    <f:param name="slug" value="#{basketitem.product.slug}"/>
+                                </p:link>
+                                <h:outputText value="#{basketitem.note}"/>
+                            </p:column>
+                            <p:column headerText="#{i18n['Unit(s)']}">
+                                <h:outputText value="#{basketitem.quantity}"/>
+                            </p:column>
+                            <p:column headerText="#{i18n['Unit Price']}">
+                                <h:outputText value="#{of:formatCurrency(shoppingBean.getPriceExchanged(basketitem.product, basketitem.quantity, 'TRY'), 'TRY')}"/>
+                            </p:column>
+                            <p:column headerText="#{i18n['Unit Tax']}">
+                                <h:outputText value="#{of:formatCurrency(shoppingBean.getTaxExchanged(basketitem.product, basketitem.quantity, 'TRY'), 'TRY')}"/>
+                            </p:column>
+                            <p:column headerText="#{i18n['Amount']}">
+                                <h:outputText value="#{of:formatCurrency(shoppingBean.getAmountExchanged(basketitem.product, 'TRY'), 'TRY')}"/>
+                            </p:column>
+                        </p:dataTable>
+
+                        <h:panelGrid columns="2" style="text-align: right; float: right;">
+                            <h:outputText value="#{i18n['Basket Total']}"/>
+                            <h:outputText value="#{of:formatCurrency(shoppingBean.doCalculateBasketTotal('TRY'), 'TRY')}"/>
+                            <h:outputText value="#{i18n['Tax Total']}"/>
+                            <h:outputText value="#{of:formatCurrency(shoppingBean.doCalculateTaxTotal('TRY'), 'TRY')}"/>
+                            <h:outputText value="#{i18n['General Total']}"/>
+                            <h:outputText value="#{of:formatCurrency(shoppingBean.doCalculateGeneralTotal('TRY'), 'TRY')}"/>
+                        </h:panelGrid>
+
+                        <h:panelGrid columns="2" cellpadding="5" style="clear: both;">
+                            <h:outputLabel value="#{i18n['Bill Address']}" style="font-weight: bolder;" />
+                            <h:panelGroup>
+                                <address>
+                                    #{shoppingBean.billAddress.firstname} #{shoppingBean.billAddress.lastname}<br/>
+                                    #{shoppingBean.billAddress.fulladdress}<br/>
+                                    <abbr title="#{i18n['Phone Number']}">P:</abbr> #{shoppingBean.billAddress.phone}<br/>
+                                </address>
+                            </h:panelGroup>
+
+                            <h:outputLabel value="#{i18n['Delivery Address']}" style="font-weight: bolder;" />
+                            <h:panelGroup>
+                                <address>
+                                    #{shoppingBean.deliveryAddress.firstname} #{shoppingBean.deliveryAddress.lastname}<br/>
+                                    #{shoppingBean.deliveryAddress.fulladdress}<br/>
+                                    <abbr title="#{i18n['Phone Number']}">P:</abbr> #{shoppingBean.deliveryAddress.phone}<br/>
+                                </address>
+                            </h:panelGroup>
+
+                            <h:outputLabel value="#{i18n['Payment Method']}" style="font-weight: bolder;" />
+                            <h:outputText value="#{i18n[shoppingBean.paymentMethod]}"/>
+                        </h:panelGrid>
+
+                        <h:form>
+                            <p:commandButton value="#{i18n['Return to shopping basket']}" action="shopping"/>
+                            <p:commandButton id="button" value="#{i18n['Complete the order']}" actionListener="#{shoppingBean.doProcessOrder}" onclick="this.childNodes[0].innerHTML = '#{i18n['Please wait']}'; this.disabled = true;"/>
+                            <p:blockUI block=":body" trigger="button" />
+                        </h:form>
+
                     </div>
                 </div>
             </div>
